syntax = "proto3";
package trip;

option go_package = "shared/proto/trip;trip";

service TripService {
    rpc PreviewTrip(PreviewTripRequest) returns (PreviewTripResponse);
    rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse);
}

message PreviewTripRequest{
    string userID = 1;
    Coordinate startLocation = 2;
    Coordinate endLocation = 3;
}

message PreviewTripResponse {
    string tripID = 1;
    Route route = 2;
    repeated RideFare rideFares = 3;
}

message Coordinate {
    double latitude = 1;
    double longitude = 2;
}


message Geometry {
    repeated Coordinate coordinates = 1;
    
}

message Route {
    repeated Geometry geometry = 1;
    double distance = 2; // in meters
    double duration = 3; // in seconds
}

message RideFare{
    string id = 1;
    string userId = 2;
    string packageSlug = 3;
    double totalPriceInCents = 4;
}


message CreateTripRequest{
    string rideFareID = 1;
    string userID = 2;
}

message CreateTripResponse{
    string tripID = 1;
}